# lambda-dive-photo-corrector

./: README.md
lambdas/: pyproject.toml
lambdas/lambda_dive_photo_corrector/: __init__.py  handler.py
lambdas/lambda_dive_photo_corrector/api/: color_corrector_response.py
lambdas/tests/: test_handler.py
